# nng

./: CMakeLists.txt  libnng-core.gpj  libnng-pair0.gpj  libnng-posix.gpj  libnng-supplemental.gpj  libnng-transport-tcp.gpj
cmake/: NNGHelpers.cmake  NNGOptions.cmake  nng-config.cmake.in
docs/man/: CMakeLists.txt  libnng.3.adoc  nng.7.adoc
src/: CMakeLists.txt
src/core/: platform.h  stream.c  taskq.c
src/platform/integrity/: integrity_random.c
src/platform/posix/: CMakeLists.txt  posix_atomic.c  posix_config.h  posix_debug.c  posix_impl.h  posix_pipe.c  posix_pollq_poll.c  posix_rand_rand32.c  posix_resolv_gai.c  posix_sockaddr.c  posix_socketpair.c  posix_tcpconn.c  posix_tcplisten.c  posix_thread.c  posix_udp.c  zephyr_config.h
src/platform/zephyr/: CMakeLists.txt  zephyr_aio.h  zephyr_alloc.c  zephyr_atomic.c  zephyr_clock.c  zephyr_config.h  zephyr_debug.c  zephyr_impl.h  zephyr_ipcdial.c  zephyr_ipclisten.c  zephyr_pipe.c  zephyr_pollq.h  zephyr_pollq_poll.c  zephyr_rand.c  zephyr_resolv.c  zephyr_sockaddr.c  zephyr_tcp.h  zephyr_tcpconn.c  zephyr_tcpdial.c  zephyr_tcplisten.c  zephyr_thread.c
src/sp/: transport.c
src/sp/transport/tcp/: tcp.c
zephyr/: CMakeLists.txt  Kconfig
